--- a/AutoPiAndroid/src/main/res/values/strings.xml
+++ b/AutoPiAndroid/src/main/res/values/strings.xml
@@ -6,5 +6,10 @@
     <string name="action_logout">Logout</string>
     <string name="title_activity_main">Dashboard</string>
     <string name="title_activity_login">Login</string>
+    <string name="title_activity_demo">DemoActivity</string>
+    <string name="hello_world">Hello world!</string>
+
+    <string name="send">Send</string>
+    <string name="clear">Clear</string>
 
 </resources>
